# polylith-demo

./: README.md  pyproject.toml
bases/demo/rest_api/: __init__.py  core.py
bases/demo/rest_api/tests/: test_api.py
components/demo/c1/: __init__.py  core.py
components/demo/c1/tests/: test_core.py
projects/lambda/: pyproject.toml
