[project]
name = "polylith-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polylith-cli>=1.35.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.uv.build-backend]
namespace = true
module-name = "demo"
module-root = ""

[tool.polylith]
namespace = "demo"
git_tag_pattern = "stable-*"

[tool.polylith.structure]
theme = "loose"

[tool.polylith.tag.patterns]
stable = "stable-*"
release = "v[0-9]*"

[tool.polylith.resources]
brick_docs_enabled = false

[tool.polylith.test]
enabled = true

[tool.polylith.bricks]
"bases/demo/rest_api" = "demo/rest_api"
"components/demo/c1" = "demo/c1"
