[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "lambda"
version = "0.1.0"

requires-python = ">=3.12"

dependencies = ["fastapi"]

[tool.hatch.build.hooks.polylith-bricks]

[tool.polylith.bricks]
"../../bases/demo/rest_api" = "demo/rest_api"
"../../components/demo/c1" = "demo/c1"
